--- a/tasks/promtail-local.yml
+++ b/tasks/promtail-local.yml
@@ -24,3 +24,12 @@
     groups: docker
     append: yes
   when: docker_installed is true
+
+- name:  Import promtail configuration template
+  template:
+    src: templates/promtail-config.yaml.j2
+    dest: /opt/promtail/config.yml
+    mode: 0644
+    owner: promtail
+    group: promtail
+  notify: Restart promtail
